--- a/app/src/main/res/layout/activity_my_requests.xml
+++ b/app/src/main/res/layout/activity_my_requests.xml
@@ -4,29 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.deena.easybid.MyRequests">
+    tools:context="com.example.deena.easybid.MyRequests"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/incompleted"
         android:layout_width="142dp"
-        android:layout_height="94dp"
-        android:text="Incompleted"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="229dp" />
+        android:layout_height="90dp"
+        android:layout_marginBottom="31dp"
+        android:background="@drawable/btn1"
+        android:text="@string/incompleted"
+        android:textColor="#1B998B"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/canceled"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/completed" />
 
     <Button
         android:id="@+id/canceled"
         android:layout_width="142dp"
-        android:layout_height="94dp"
-        android:text="Canceled"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="342dp" />
+        android:layout_height="90dp"
+        android:layout_marginBottom="43dp"
+        android:background="@drawable/btn1"
+        android:text="@string/canceled"
+        android:textColor="#1B998B"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/incompleted" />
 
     <Button
         android:id="@+id/completed"
         android:layout_width="142dp"
-        android:layout_height="94dp"
-        android:text="Completed"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="111dp" />
+        android:layout_height="90dp"
+        android:layout_marginBottom="34dp"
+        android:layout_marginTop="103dp"
+        android:background="@drawable/btn1"
+        android:text="@string/completed"
+        android:textColor="#1B998B"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/incompleted"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
