--- a/app/src/main/res/layout/activity_my_requests.xml
+++ b/app/src/main/res/layout/activity_my_requests.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,42 +12,32 @@
         android:id="@+id/incompleted"
         android:layout_width="142dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="31dp"
         android:background="@drawable/btn1"
         android:text="@string/incompleted"
         android:textColor="#1B998B"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/canceled"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/completed" />
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="242dp" />
 
     <Button
         android:id="@+id/canceled"
         android:layout_width="142dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="43dp"
         android:background="@drawable/btn1"
         android:text="@string/canceled"
         android:textColor="#1B998B"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/incompleted" />
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="371dp" />
 
     <Button
         android:id="@+id/completed"
         android:layout_width="142dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="34dp"
-        android:layout_marginTop="103dp"
         android:background="@drawable/btn1"
         android:text="@string/completed"
         android:textColor="#1B998B"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/incompleted"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="111dp" />
 </android.support.constraint.ConstraintLayout>
