--- a/app/src/main/res/layout/activity_my_requests.xml
+++ b/app/src/main/res/layout/activity_my_requests.xml
@@ -1,43 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.deena.easybid.MyRequests"
-    tools:layout_editor_absoluteY="81dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <Toolbar
+        android:id="@+id/atc_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/logo"
+        android:elevation="4dp"></Toolbar>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="30dp"
+        android:layout_height="26dp"
+        android:layout_alignBottom="@+id/atc_toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="14dp"
+        android:layout_marginStart="13dp"
+        android:background="@drawable/drawer" />
 
     <Button
         android:id="@+id/incompleted"
         android:layout_width="142dp"
         android:layout_height="90dp"
+        android:layout_above="@+id/canceled"
+        android:layout_alignStart="@+id/canceled"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/btn1"
         android:text="@string/incompleted"
         android:textColor="#1B998B"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="242dp" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/canceled"
+
         android:layout_width="142dp"
         android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="38dp"
         android:background="@drawable/btn1"
         android:text="@string/canceled"
         android:textColor="#1B998B"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="371dp" />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/completed"
         android:layout_width="142dp"
         android:layout_height="90dp"
+        android:layout_above="@+id/incompleted"
+        android:layout_alignStart="@+id/incompleted"
+        android:layout_marginBottom="37dp"
         android:background="@drawable/btn1"
         android:text="@string/completed"
         android:textColor="#1B998B"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="111dp" />
-</android.support.constraint.ConstraintLayout>
+        android:textStyle="bold" />
+
+</RelativeLayout>
