--- a/app/src/main/res/layout/activity_my_requests.xml
+++ b/app/src/main/res/layout/activity_my_requests.xml
@@ -3,24 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <Toolbar
-        android:id="@+id/atc_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/logo"
-        android:elevation="4dp"></Toolbar>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="30dp"
-        android:layout_height="26dp"
-        android:layout_alignBottom="@+id/atc_toolbar"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp"
-        android:layout_marginStart="13dp"
-        android:background="@drawable/drawer" />
+<include android:layout="@layout/header"/>
 
     <Button
         android:id="@+id/incompleted"
